adding unit test coverage for backend java app and refactoring applicaiton logic